Added SEO improvements and blog functionality

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://your-domain.example" />
     <title>MediaManager4U - Digital Marketing Agency</title>
   <meta name="description" content="MediaManager4U — digital marketing agency helping creators and businesses grow with content, ads, and strategy. Book a free strategy call or explore our services." />
   <meta name="theme-color" content="#0ea5a4" />
@@ -15,7 +16,6 @@
   <meta property="og:url" content="https://your-domain.example" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@your_twitter_handle" />
-
   <style>
     /* Accessible skip link, visible on focus */
     .skip-link{
