--- a/client/index.html
+++ b/client/index.html
@@ -4,43 +4,52 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="canonical" href="https://your-domain.example" />
+    <link rel="canonical" href="https://www.mediamanager4u.com" />
     <title>MediaManager4U - Digital Marketing Agency</title>
-  <meta name="description" content="MediaManager4U — digital marketing agency helping creators and businesses grow with content, ads, and strategy. Book a free strategy call or explore our services." />
-  <meta name="theme-color" content="#0ea5a4" />
-  <meta name="robots" content="index, follow" />
-  <!-- Open Graph / Twitter -->
-  <meta property="og:title" content="MediaManager4U — Digital Marketing & Content Growth" />
-  <meta property="og:description" content="We help creators and businesses grow their audience, engagement and revenue with strategy, content and ads." />
-  <meta property="og:image" content="/images/og-image.png" />
-  <meta property="og:url" content="https://your-domain.example" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@your_twitter_handle" />
-  <style>
-    /* Accessible skip link, visible on focus */
-    .skip-link{
-      position: absolute;
-      top: -40px;
-      left: 8px;
-      background: #0b7285;
-      color: white;
-      padding: 8px 12px;
-      z-index: 1000;
-      border-radius: 4px;
-      transition: top 0.16s ease-in-out;
-    }
-    .skip-link:focus{ top: 8px; outline: 3px solid #ffd; }
-  </style>
+    <meta name="description" content="MediaManager4U — digital marketing agency helping creators and businesses grow with content, ads, and strategy. Book a free strategy call or explore our services." />
+    <meta name="theme-color" content="#0ea5a4" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Twitter -->
+    <meta property="og:title" content="MediaManager4U — Digital Marketing & Content Growth" />
+    <meta property="og:description" content="We help creators and businesses grow their audience, engagement and revenue with strategy, content and ads." />
+    <meta property="og:image" content="https://www.mediamanager4u.com/images/og-image.png" />
+    <meta property="og:url" content="https://www.mediamanager4u.com" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@mediamanager4u" />
+    <meta name="twitter:title" content="MediaManager4U — Digital Marketing & Content Growth" />
+    <meta name="twitter:description" content="We help creators and businesses grow their audience, engagement and revenue with strategy, content and ads." />
+    <meta name="twitter:image" content="https://www.mediamanager4u.com/images/og-image.png" />
+
+    <style>
+      /* Accessible skip link, visible on focus */
+      .skip-link{
+        position: absolute;
+        top: -40px;
+        left: 8px;
+        background: #0b7285;
+        color: white;
+        padding: 8px 12px;
+        z-index: 1000;
+        border-radius: 4px;
+        transition: top 0.16s ease-in-out;
+      }
+      .skip-link:focus{ top: 8px; outline: 3px solid #ffd; }
+    </style>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "MediaManager4U",
-        "url": "https://your-domain.example",
-        "logo": "https://your-domain.example/images/logo.png",
+        "url": "https://www.mediamanager4u.com",
+        "logo": "https://www.mediamanager4u.com/images/logo.png",
         "sameAs": [
           "https://www.facebook.com/yourpage",
           "https://www.instagram.com/yourpage",
